//FILE=IotFromServer #see ./IotCommon.proto
//cd $include;mklink FromServer.proto $JDE_BASH/Public/src/web/proto;cd $source; mklink FromServer.pb.h $JDE_BASH/Public/src/web/proto

syntax = "proto3";
package Jde.Opc.Gateway.FromServer;
import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";
import "Opc.Common.proto";
import "Common.proto";

message MonitoredItemCreateResult{
  uint32 status_code=1;
  double revised_sampling_interval=2;
  uint32 revised_queue_size=3;
}

message SubscriptionAck{
	repeated MonitoredItemCreateResult results=2;
}

message Value{
	oneof of{
		bool boolean=1;
		uint32 byte=2;
		bytes byte_string=3;
		google.protobuf.Timestamp date=4;
		double double_value=5;
		google.protobuf.Duration duration=6;
		Jde.Opc.Proto.ExpandedNodeId expanded_node=7;
		float float_value=8;
		bytes guid=9;
		int32 int16=10;
		int32 int32=11;
		int64 int64=12;
		Jde.Opc.Proto.NodeId node=13;
		int32 sbyte=14;
		int32 status_code=15;
		string string_value=16;
		uint32 uint16=17;
		uint32 uint32=18;
		uint64 uint64=19;
		string xml_element=20;
	}
}

message NodeValues{
	string opc_id=1;
	Jde.Opc.Proto.NodeId node=2;
	repeated Value values=3;
}

message UnsubscribeAck{
	repeated Jde.Opc.Proto.NodeId successes=1;
	repeated Jde.Opc.Proto.NodeId failures=2;
}

message Message{
	uint32 request_id = 1;
	oneof Value{
		uint32 ack = 2;	//SocketSessionId
		NodeValues node_values = 3; //Subscription Broadcast
		Jde.Proto.Exception exception = 4;
		SubscriptionAck subscription_ack = 5; //Subscription acknowledgement
		UnsubscribeAck unsubscribe_ack = 7; //Unsubscribe acknowledgement
	}
}

message Transmission{
	repeated Message messages=1;
}
